src/k8s/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetespoc-api-ingress
  namespace: samplepocs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /kubernetespoc
        backend:
          serviceName: kubernetespocs-api
          servicePort: 80
